test/sema/typeck/literal/int64-neg-overflow.out
error: number does not fit into type Int64.
--> int64-neg-overflow.dora:1:20
 | fn f() { let _x = -9223372036854775809i64; }
                      ~~~~~~~~~~~~~~~~~~~~~~
 | 
1 error found.
