test/sema/typeck/literal/int64-neg-overflow.dora
fn f() { let _x = -9223372036854775809i64; }
